- pngwolf - http://bjoern.hoehrmann.de/pngwolf
- rehuff - http://wiki.xiph.org/Rehuff
- tidy-html5 4.9.26-191-gb4efe74 - http://www.paehl.com/open_source/?HTML_Tidy_for_HTML5
- TruePNG 0.6.2.0 - http://x128.ho.ua/pngutils.html
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


XXXXX - YYYYYYY
- Updated pngquant to 2.5.2.
- Updated TruePNG to 0.6.2.0.


8.20 - 2016/02/13
- Added INI setting DisablePluginMask= to allow excluding execution of certain plugins. For instance DisablePluginMask=leanify;advpng.exe (hairycactus).
- Added INI setting AllowDuplicates=false to allow adding same file more than once. If enabled, adding to the grid will be much faster, specially on very large grids (Priit).
- Better High DPI compatibility.
- Use Windows 10 theme by default on Windows 8 and newer.
- Cleanedup JPEG options page glitches (d4k0).
- Delay load shcore.dll to avoid a C++ Builder bug on WINE (trlkly).
- Make child windows show always on top, even if main window uses AlwaysOnTop=false (hairycactus).
- Make FileOptimizer a true lossless tool by default by setting PDF Profile to none by default (RejZoR).
- Fix Windows 8.1 and later detection, by using RtlGetVersion because old previous functions (GetVersion, IsWin10OrLater, ...) only work for manifested applications.
- Fixed ZIP Leanify processing not honoring not recursing (Jaff).
- Adding files to grid is three times faster because of some refreshes removed, and other little tweaks (Priit).
- Checking for already existing files in the grid, is about 10x faster, by taking advantage of IndexOf (Priit).
- Uptated to ECT 0.2.1 x86 and x64 optimized builds (thanks Malloc Voidstar).
- Updated ImageMagick to 6.9.3.3 with HDRI support.
- Updated TruePNG to 0.6.1.9.
- Revert to Ghostcript 9.15 since Ghostcript 9.18 crashes, and 9.16 has worse compression ratios (hairycactus).
- Updated to NSIS 3.0 beta 3.
- Updated to cppcheck 1.72.